@@ -2,6 +2,8 @@
  * t/public_key.t: refine the testing for DNS timeouts and SERVFAIL
    errors
  * t/policy.t: add some tests for DNS failures during policy queries
+ * lib/Mail/DKIM/AuthorDomainPolicy.pm: more explicit documentation
+   describing how DNS errors (and NXDOMAIN results) are handled
 
 2009-07-09: Jason Long <jlong@messiah.edu>
  * lib/Mail/DKIM/Policy.pm: allow subclasses to override behavior
